[package]
name = "importer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
chrono = "0.4.43"
ctrlc = "3.5.1"
deadpool-postgres = { version = "0.14.1", features = ["rt_tokio_1", "serde"] }
dotenv = "0.15.0"
ordered-float = "5.1.0"
refinery = { version = "0.9.0", features = ["postgres", "tokio-postgres"] }
reqwest = { version = "0.13.1", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-postgres = { version = "0.7.16", features = ["js", "with-chrono-0_4", "with-serde_json-1"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
